ensure videos aren't too tall

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -76,6 +76,7 @@ video,
 figure,
 img {
   max-width: 100%;
+  max-height: 50vh;
 }
 
 // Utilities
